<resources>
    <string name="app_name">checkbox</string>
    <string name="painting">painting</string>
    <string name="drawing">drawing</string>
    <string name="mad_experiment_2_2">mad_experiment_2_2</string>
    <string name="checkbox">checkbox</string>
    <string name="check">check</string>
    <string name="painting_">" Painting "</string>
    <string name="drawing_">" drawing "</string>
    <string name="mad_experiment">MAD Experiment</string>
    <string name="checkbox_">Checkbox</string>
</resources>